Fixed horizontal scroll bar showing up on mobile devices by slightly reducing the animation distance on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,13 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-    ::-webkit-scrollbar {
-        -webkit-appearance: none;
+    body {
+        overflow-x: hidden !important;
+    }
+
+    .container {
+        max-width: 100% !important;
+        overflow-x: hidden !important;
     }
 }
 
